--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Detective and mystery stories, American'
+- GITenberg
 tableOfContents: The third eye -- The immortal -- The ladies of the lake -- One over
   -- Un peu d'amour -- The eggs of the Silver Moon.
 title: Police!!!
